--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
                 <span style="color: darkturquoise;">Course Number: COMP-213</span><br>
                 <span style="color: darkturquoise;">Semester: First</span><br>
             </h1>
-            <h3>
+            <h4>
                <span style="color: mediumpurple;"> Link to Assignment 2:
-                <a href="assignment2.html">Assignment #2</a> </span>
-            </h3>
+                <a href="assignment2.html">Assignment #2</a> 
+                <a href="assignment3.html">Assignment #3</a>
+               </span>
+            </h4>
             <hr>
         </div>
         <!-- Muskaan Saini
